--- a/index.html
+++ b/index.html
@@ -1,149 +1,25 @@
-<!DOCTYPE html>
-
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Rory Wagner</title>
-  <meta name="description" content="Portfolio and CV">
-  <meta name="author" content="Rory Wagner">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
-  <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-    <![endif]-->
+    <title>Hello, world!</title>
   </head>
-  <body class="container-fluid">
-  <!--About Section-->
-  <section id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5" id="profile">
-          <img id="profile-img" src="http://i.imgur.com/eZUGfFx.jpg" alt="Myself">
-        </div>
-
-        <div class="col-md-7" id="intro">
-          <h1>Hello, world!</h1>
-          <h2>Welcome to my personal website</h2>
-          <h3>Here you can find out more about who I am, what I enjoy doing and take a look at some of my work.</h3>
-          <h3>Enjoy and feel free to get in touch below...</h3>
-        </div>
-      </div>
+  <body>
+    <div class="container-fluid">
+      <h1>Hello, world!</h1>
     </div>
-  </section>
+    
 
-  <div class="v-divider"></div>
-
-  <!--Portfolio Section-->
-  <section id="portfolio">
-    <div class="row">
-      <div class="col-md-12">
-        <strong>My Work</strong>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <a href="#">
-          <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-        <a href="#">Project Name</a>
-                </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-
-      <div class="col-md-4">
-        <a href="#">
-          <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-        <a href="#">Project Name</a>
-                </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-
-      <div class="col-md-4">
-        <a href="#">
-          <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-        <a href="#">Project Name</a>
-                </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <a href="#">
-          <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-        <a href="#">Project Name</a>
-                </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-
-      <div class="col-md-4">
-        <a href="#">
-          <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-        <a href="#">Project Name</a>
-                </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-
-      <div class="col-md-4">
-        <a href="#">
-          <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-        <a href="#">Project Name</a>
-                </h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-      </div>
-
-    </div>
-  </section>
-
-  <!--Contact Section-->
-  <section id="contact">
-    <div class="row">
-      <div class="col-md-12">
-        <strong>Contact Me</strong>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-md-4">
-        <a href="https://www.linkedin.com/in/rorywagner/">
-          <img class="social-icon" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/linkedin-128.png" alt="Linkedin">
-        </a>
-      </div>
-
-      <div class="col-md-4">
-        <a href="https://github.com/rorywag">
-          <img class="social-icon" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-128.png" alt="GitHub">
-        </a>
-      </div>
-
-      <div class="col-md-4">
-        <a href="https://twitter.com/rorywag">
-          <img class="social-icon" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/twitter-128.png" alt="Twitter">
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!--Footer Section-->
-  <footer>
-    <small>© Copyright 2017, Rory Wagner</small>
-  </footer>
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
+</html>
