--- a/methodology.html
+++ b/methodology.html
@@ -79,7 +79,7 @@
 		<p><strong>Development Setup</strong></p>
 		<ul>
 			<li>VMware version 14 was used to mount the Windows 10 ISOs.</li>
-			<li>Windows 10 1803 2018 April 1809 October and 1709 Fall builds were installed from ISO’s acquired from Windows 10 ISO DB. Windows Pro was chosen due to the flexibility that version of Windows has, even though it is more likely that the actors would have used Windows Home.</li>
+			<li>Windows 10 - 1803 2018 April, 1809 October and 1709 Fall builds were installed from ISO’s acquired from Windows 10 ISO DB. Windows Pro was chosen due to the flexibility that version of Windows has, even though it is more likely that the actors would have used Windows Home.</li>
 			<li>Each Operating system had their automatic update features disabled. Unfortunately, due to the using Windows 10, there is a 33 day limit on restricting automatic updates without the use of group policy.</li>
 			<li>Open source and free memory tools were tested to determine which tool leaves the smallest footprint on the virtual machine. Due to the limited support for Windows 10 only tools that were compatible were tested:</li>
 				<p></p>
